Updated locales en

--- a/extensions/sync-contifico-action/locales/en.default.json
+++ b/extensions/sync-contifico-action/locales/en.default.json
@@ -1,4 +1,4 @@
 {
-  "name": "sync-contifico-action",
+  "name": "Synchronize with Contifico",
   "welcome": "Welcome to the {{TARGET}} extension!"
 }
